# clean_disk

./: .gitignore  .mcp.json  AGENTS.md  Cargo.toml  FRONTEND_LAYOUT_GUIDE.md  README.md  START_HERE.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: reviewrouter-codex.yml  reviewrouter-interaction.yml
apps/clean_disk/: README.md  pubspec.yaml
apps/clean_disk_server/: Cargo.toml
apps/clean_disk_server/src/: lib.rs  main.rs
apps/clean_disk_server/tests/: daemon_routes.rs
docs/technical/: README.md  architecture-decisions.md  architecture-fit-validation.md  architecture-future-risks.md  architecture-principles.md  capability-implementation-matrix.md  clean-architecture-implementation-phases.md  cross-platform-user-experience-playbook.md  disk-usage-map-view-adapter.md  documentation-map.md  documentation-operating-manual.md  documentation-sitemap.md  documentation-tree.md  execution-board.md  feature-ux-benchmark.md  flutter-frontend-architecture-decision.md  frontend-boundaries-decision.md  frontend-i18n-localization-decision.md  future-proofing-architecture-gates.md  growing-tree-streaming-architecture.md  headless-clean-disk-priority-index.md  headless-tree-grid-primitive-design.md  implementation-edge-cases-advanced-scenarios.md  implementation-edge-cases-cleanup-delete-safety.md  implementation-edge-cases-cloud-network-virtual-filesystems.md  implementation-edge-cases-concurrency-state-machines.md  implementation-edge-cases-deep-dive.md  (+60 more)
rust/crates/fs_usage_pdu/: Cargo.toml
rust/crates/fs_usage_pdu/src/: backend.rs  converter.rs  growing.rs  lib.rs  options.rs  reporter.rs
rust/crates/fs_usage_pdu/tests/: pdu_scanner_backend.rs
(+417 files in other folders)
